; ModuleID = '/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_server_request_get_requesting_addr.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_server_request_get_requesting_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdns_server_request = type { i32 }
%struct.sockaddr = type { i32 }
%struct.server_request = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evdns_server_request_get_requesting_addr(%struct.evdns_server_request* %0, %struct.sockaddr* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.evdns_server_request*, align 8
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.server_request*, align 8
  store %struct.evdns_server_request* %0, %struct.evdns_server_request** %5, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.evdns_server_request*, %struct.evdns_server_request** %5, align 8
  %10 = call %struct.server_request* @TO_SERVER_REQUEST(%struct.evdns_server_request* %9)
  store %struct.server_request* %10, %struct.server_request** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.server_request*, %struct.server_request** %8, align 8
  %13 = getelementptr inbounds %struct.server_request, %struct.server_request* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp slt i32 %11, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %19 = load %struct.server_request*, %struct.server_request** %8, align 8
  %20 = getelementptr inbounds %struct.server_request, %struct.server_request* %19, i32 0, i32 1
  %21 = load %struct.server_request*, %struct.server_request** %8, align 8
  %22 = getelementptr inbounds %struct.server_request, %struct.server_request* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @memcpy(%struct.sockaddr* %18, i32* %20, i32 %23)
  %25 = load %struct.server_request*, %struct.server_request** %8, align 8
  %26 = getelementptr inbounds %struct.server_request, %struct.server_request* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %17, %16
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local %struct.server_request* @TO_SERVER_REQUEST(%struct.evdns_server_request*) #1

declare dso_local i32 @memcpy(%struct.sockaddr*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
